# vidstamp

./: 404.html  README.md  index.html  package-lock.json  package.json  vite.config.js  wrangler.jsonc
api/: README.md  app.py  generate_jwt_secret.py  generate_password_hash.py  pyproject.toml  requirements.txt  vidstamp.db
assets/: index-DrbzEIty.js  index-hxxzMUOg.js
scripts/: copy-404.cjs
src/: App.jsx
src/pages/: Home.jsx  Results.jsx  Survey.jsx  ThankYou.jsx  VideoPage.jsx
